# GTKSpice

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  TODO  cmake_install.cmake  tags
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/app/: action.cpp  action.h  action_factory.cpp  action_factory.h  action_stack.cpp  action_stack.h  canvas.cpp  canvas.h  component.cpp  component.h  component_params.h  coordinate.cpp  coordinate.h  coordinate_system.cpp  coordinate_system.h  coordinate_system_old.cpp  draw_primitives.cpp  draw_primitives.h  element_map.cpp  element_map.h  geometry.h  gtkspice.cpp  gtkspice.h  gtkspice_object.cpp  gtkspice_object.h  gtkspice_object_list.cpp  gtkspice_object_list.h  gtkspice_state.cpp  gtkspice_state.h  key_accel_map.cpp  key_accel_map.h  keyaccel.h  ltspice_symbol_lexer.cpp  ltspice_symbol_lexer.h  ltspice_symbol_lexer.ih  ltspice_symbol_lexerbase.h  ltspice_symbol_lexfile.l  ltspice_symbol_parser.cpp  ltspice_symbol_parser.h  ltspice_symbol_parser.ih  (+26 more)
src/gui/: cursor_manager.h  drawingeventbox.cpp  drawingeventbox.h  drawingeventbox_keyaccel.cpp  drawingeventbox_keyaccel.h  grid.cpp  grid.h  view.cpp  view.h  view_features.cpp  view_features.h  viewport.cpp  viewport.h  window.cpp  window.h
src/spice/: spice_deck.h  spice_directive.h  spice_element.h  spice_model.h
src/testing/: debug_text.cpp  debug_text.h  test_spice.cpp  testdraw.cpp  testdraw.h
src/tools/: pan.h  pointer.h  tool.cpp  tool.h  tool_component.h  tool_component_drag.cpp  tool_component_drag.h  tool_component_fliplr.h  tool_component_flipud.h  tool_component_rotate.h  tool_component_rotateccw.h  tool_component_rotatecw.h  tool_delete.cpp  tool_delete.h  tool_draw.h  tool_draw_line.cpp  tool_draw_line.h  tool_draw_wire.cpp  tool_draw_wire.h  tool_line.cpp  tool_line.h  tool_manager.h  (+7 more)
(+20 files in other folders)
